<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RockzIB</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="back">&lt;</string>
    <string name="forward">></string>
    <string name="stop">X</string>
    <string name="go">Go</string>
    <string name="web_address">Web Address</string>

</resources>
