<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/backButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linlay"
        android:layout_alignParentBottom="true"
        android:text="@string/back" />

    <Button
        android:id="@+id/fwButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/backButton"
        android:text="@string/forward" />

    <LinearLayout
        android:id="@+id/linlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignBottom="@+id/backButton"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/goButton"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/editText1"
            android:layout_width="282dp"
            android:layout_height="wrap_content"
            android:ems="10" 
            android:inputType="textWebEditText"
            android:hint="@string/web_address"
            />

        <WebView
            android:id="@+id/webView"
            android:layout_width="match_parent"
            android:layout_height="368dp" />

    </LinearLayout>

    <Button
        android:id="@+id/stopButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/linlay"
        android:text="@string/stop" />

    <Button
        android:id="@+id/goButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/linlay"
        android:text="@string/go" />

</RelativeLayout>